package presentation;

import javax.swing.*;

public class KakuroGrid extends JButton {

    public KakuroGrid(){
        
    }
}
