package presentation;

public class MainProgram {

    public static void main(String[] args) {
        CtrlPresentation ctrlPresentation = new CtrlPresentation();
        ctrlPresentation.initPresentation();
    }
}
