package presentation;

import javax.swing.*;

public class RowRanking extends JComponent {
    public RowRanking(){
        super();
    }
}
