package presentation;

import javax.swing.*;

public class RowSelectGame extends JComponent {
    public RowSelectGame(){
        super();
    }
}
