@startuml

title __PRESENTATION's Class Diagram__\n

  namespace presentation {
    class presentation.CreateKakuroView {
        - AUTOMATICGENERATIONButton : JButton
        - ERRORdisplay : JLabel
        - GENERATEFIELDButton : JButton
        - GOBACKbutton : JButton
        - INFOButton : JButton
        - READFROMFILEButton : JButton
        - VALIDATEButton : JButton
        - buttonsDisplay : JPanel
        - createKakuroPanel : JPanel
        - difficultyComboBox : JComboBox
        - heightField : JTextField
        - kakuroDisplay : JPanel
        - numFilledCellsField : JTextField
        - titleContainer : JPanel
        - viewTitle : JLabel
        - widthField : JTextField
        + CreateKakuroView()
        + getCreateKakuroPanel()
        + setVisible()
        - initComponents()
    }
  }
  

  namespace presentation {
    class presentation.CtrlPresentation {
        + CtrlPresentation()
        + addValueToCell()
        + askHint()
        + deleteGame()
        + deleteUser()
        + eliminateUser()
        + exitGame()
        + generateKakuro()
        + getActiveUser()
        + getListGames()
        + getListKakuros()
        + iniUserMenu()
        + initPresentation()
        + listGlobalRanking()
        + listPersonalStats()
        + logInUser()
        + makeCreateKakuroViewVisible()
        + makeLogInViewVisible()
        + makePlayGameViewVisible()
        + makeRankingViewVisible()
        + makeSelectGameViewVisible()
        + makeUserMenuViewVisible()
        + saveGame()
        + validateKakuro()
    }
  }
  

  namespace presentation {
    class presentation.KakuroGrid {
        + paint()
    }
  }
  

  namespace presentation {
    class presentation.LogInView {
        - enterButton : JButton
        - kakuroContainer : JPanel
        - logInPanel : JPanel
        - usernameTextField : JTextField
        + LogInView()
        + getLogInPanel()
        + setVisible()
        - createUIComponents()
        - initComponents()
    }
  }
  

  namespace presentation {
    class presentation.Logo {
        - image : BufferedImage
        - newImage : Image
        + Logo()
        # paintComponent()
    }
  }
  

  namespace presentation {
    class presentation.MainFrame {
        - MainFrame : JPanel
        + MainFrame()
        + iniUserMenu()
        + mainFrameInit()
        + makeCreateKakuroViewVisible()
        + makeLogInViewVisible()
        + makePlayGameViewVisible()
        + makeRankingViewVisible()
        + makeSelectGameViewVisible()
        + makeUserMenuViewVisible()
        + makeVisible()
    }
  }
  

  namespace presentation {
    class presentation.MainProgram {
        {static} + main()
    }
  }
  

  namespace presentation {
    class presentation.PlayGameView {
        - ASKHINTButton : JButton
        - EXITButton : JButton
        - SAVEANDEXITButton : JButton
        - buttonsContainer : JPanel
        - errorMessage : JLabel
        - footerContainer : JPanel
        - kakuroContainer : JPanel
        - playGamePanel : JPanel
        - timerLabel : JLabel
        - titleContainer : JPanel
        - titleLabel : JLabel
        + PlayGameView()
        + getPlayGamePanel()
        + setVisible()
        - initComponents()
    }
  }
  

  namespace presentation {
    class presentation.RankingView {
        - gobackButton : JButton
        - headerContainer : JPanel
        - rankingList : JScrollPane
        - rankingPanel : JPanel
        + RankingView()
        + getRankingPanel()
        + setVisible()
        - createUIComponents()
        - initComponents()
    }
  }
  

  namespace presentation {
    class presentation.RowRanking {
        + RowRanking()
    }
  }
  

  namespace presentation {
    class presentation.RowSelectGame {
        + RowSelectGame()
    }
  }
  

  namespace presentation {
    class presentation.RowSelectKakuro {
        + RowSelectKakuro()
    }
  }
  

  namespace presentation {
    class presentation.SelectGameView {
        - GOBACKButton : JButton
        - headerContainer : JPanel
        - listGamesContainer : JPanel
        - scrollBar1 : JScrollBar
        - selectGamePanel : JPanel
        - titleLabel : JLabel
        + SelectGameView()
        + getSelectGamePanel()
        + setVisible()
        - createUIComponents()
        - initComponents()
    }
  }
  

  namespace presentation {
    class presentation.UserMenuView {
        - CREATEKAKUROButton : JButton
        - DELETEUSERButton : JButton
        - GLOBALRANKINGButton : JButton
        - LOGOUTButton : JButton
        - PERSONALSTATSButton : JButton
        - PLAYGAMEButton : JButton
        - userMenuPanel : JPanel
        - usernameLabel : JLabel
        + UserMenuView()
        + getUserMenuPanel()
        + setUsername()
        + setVisible()
        - createUIComponents()
        - initComponents()
    }
  }
  

  presentation.CreateKakuroView o-- presentation.CtrlPresentation : ctrlPresentation
  presentation.CtrlPresentation o-- domain.CtrlDomain : ctrlDomain
  presentation.CtrlPresentation o-- presentation.MainFrame : mainFrame
  presentation.KakuroGrid -up-|> javax.swing.JComponent
  presentation.LogInView o-- presentation.CtrlPresentation : ctrlPresentation
  presentation.LogInView o-- presentation.Logo : kakuroLogo
  presentation.Logo -up-|> javax.swing.JPanel
  presentation.MainFrame -up-|> javax.swing.JFrame
  presentation.MainFrame o-- presentation.CreateKakuroView : createKakuroView
  presentation.MainFrame o-- presentation.CtrlPresentation : ctrlPresentation
  presentation.MainFrame o-- presentation.LogInView : logInView
  presentation.MainFrame o-- presentation.PlayGameView : playGameView
  presentation.MainFrame o-- presentation.RankingView : rankingView
  presentation.MainFrame o-- presentation.SelectGameView : selectGameView
  presentation.MainFrame o-- presentation.UserMenuView : userMenuView
  presentation.PlayGameView o-- presentation.CtrlPresentation : ctrlPresentation
  presentation.RankingView o-- presentation.CtrlPresentation : ctrlPresentation
  presentation.RowRanking -up-|> javax.swing.JComponent
  presentation.RowSelectGame -up-|> javax.swing.JComponent
  presentation.RowSelectKakuro -up-|> javax.swing.JComponent
  presentation.SelectGameView o-- presentation.CtrlPresentation : ctrlPresentation
  presentation.UserMenuView o-- presentation.CtrlPresentation : ctrlPresentation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
